# rust

./: Cargo.toml  vimrc  whiteboard.txt
adventofcode/: Cargo.toml
adventofcode/src/: lib.rs
fun/: Cargo.toml
fun/src/: asciirhoids.rs  ipc.rs  lag.rs  lib.rs  main.rs  term.rs
hyphen/: Cargo.toml
hyphen/src/: lib.rs  main.rs  obj.rs
ipc/: Cargo.toml
ipc/src/: lib.rs
life/: Cargo.toml
life/src/: dbuff.rs  lib.rs  life.rs  lifeh.rs  main.rs
main/: Cargo.toml
main/src/: asciirhoids.rs  fun.rs  lag.rs  learn.rs  lib.rs  life.rs  matrix.rs  term.rs
maze/: Cargo.toml
maze/src/: lib.rs  main.rs
src/: asciirhoids.rs  fun.rs  ipc.rs  lag.rs  lib.rs  main.rs  term.rs  util.rs  vimrc
telegram/: Cargo.toml
term/: Cargo.toml
term/src/: lib.rs
tmbot/: Cargo.toml
util/: Cargo.toml
util/plotter/: Cargo.toml
util/plotter/src/: lib.rs  plotter.rs
util/src/: lib.rs
utils/: Cargo.toml
utils/plotter/: Cargo.toml
utils/plotter/src/: lib.rs
utils/src/: base64.rs  lib.rs
