[package]
name = "rust"
version = "0.0.0"
authors = ["b f <brianf@geemale.kom>"]
edition = "2018"

[workspace]
members = [ "main", "life", "ipc", "utils", "term", "hyphen", "telegram" ]
# "adventofcode", "hyphen", "maze"


[dependencies]
main   = { path = "main" }
life   = { path = "life" }
hyphen = { path = "hyphen" }
telegram = { path = "telegram" }
########################################
#maze = { path = "maze" }
#utils = { path = "utils" }
#adventofcode = { path = "adventofcode" }