[package]
name = "rust"
version = "0.0.0"
authors = ["b f <brianf@geemale.kom>"]
edition = "2018"

[profile.dev]
opt-level = 3

[workspace]
members = [ "main", "life", "ipc", "utils", "term", "hyphen", "tmbot" ]
# "adventofcode", "hyphen", "maze"


[dependencies]
main   = { path = "main" }
life   = { path = "life" }
hyphen = { path = "hyphen" }
#tmbot = { path = "tmbot" }
########################################
#maze = { path = "maze" }
#utils = { path = "utils" }
#adventofcode = { path = "adventofcode" }