[package]
name = "life"
version = "0.0.0"
authors = ["b f <brianf@geemale.kom>"]
edition = "2018"

[dependencies]
rand = "*"
piston_window = "*"
piston = "*"
piston2d-graphics = "*"
piston2d-opengl_graphics = "*"
pistoncore-glutin_window = "*"
term = { path = "../term" }
utils = { path = "../utils" }