[package]
name = "main"
version = "0.0.0"
authors = ["b f <brianf@geemale.kom>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipc = { path = "../ipc" }
util = { path = "../util" }
term = { path = "../term" }
life = { path = "../life" }
libc = "0.2"
rand = "0.7.3"
json = "0.12.4"
log = "0.4.11"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57" 

# An all inclusive 2d graphics crate...
piston_window = "*"
# ...Or import many things for faster 2d performance.
piston = "*"
piston2d-graphics = "*"
piston2d-opengl_graphics = "*"
pistoncore-glutin_window = "*"
