[package]
name = "main"
version = "0.0.0"
authors = ["b f <brianf@geemale.kom>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipc     = { path = "../ipc" }
utils    = { path = "../utils" }
plotter = { path = "../utils/plotter" }
term    = { path = "../term" }
life    = { path = "../life" }
maze    = { path = "../maze" }

libc = "0.2"
rand = "*"
json = "*"
log  = "*"
pretty_env_logger = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"

## An all inclusive 2d graphics crate...
piston_window = "*"

## ...Or import many things and talk to GL libs directly for faster 2d performance.
piston = "*"
piston2d-graphics = "*"
piston2d-opengl_graphics = "*"
pistoncore-glutin_window = "*"
